ver 0.20.14 (not yet released)

ver 0.20.13 (2017/12/18)
* output
  - osx: set up ring buffer to hold at least 100ms
* mixer
  - alsa: fix rounding errors
* database
  - simple: don't purge mount points on update/rescan
  - simple: fix "mount" bug caused by bad compiler optimization
  - simple: fix "lsinfo" into mount points
  - upnp: work around libupnp 1.6.24 API breakage
* queue: fix spuriously misplaced prioritized songs
* save and restore mountpoints within the state file
* include Windows cross-build script in source tarball
* fix Windows build failures

ver 0.20.12 (2017/11/25)
* database
  - upnp: adapt to libupnp 1.8 API changes
* input
  - cdio_paranoia, ffmpeg, file, smbclient: reduce lock contention,
    fixing lots of xrun problems
  - curl: fix seeking
* decoder
  - ffmpeg: fix GCC 8 warning
  - vorbis: fix Tremor support
* player
  - log message when decoder is too slow
* encoder
  - vorbis: default to quality 3
* output
  - fix hanging playback with soxr resampler
  - httpd: flush encoder after tag; fixes corrupt Vorbis stream

ver 0.20.11 (2017/10/18)
* storage
  - curl: support Content-Type application/xml
* decoder
  - ffmpeg: more reliable song duration
  - gme: fix track numbering
* improve random song order when switching songs manually
* fix case insensitive search without libicu
* fix Unicode file names in playlists on Windows
* fix endless loop when accessing malformed file names in ZIP files

ver 0.20.10 (2017/08/24)
* decoder
  - ffmpeg: support MusicBrainz ID3v2 tags
* tags
  - aiff: fix FORM chunk size endianess (is big-endian)
* mixer
  - osx: add a mixer for OSX.
* fix crash when resuming playback before decoder is ready
* fix crash on Windows

ver 0.20.9 (2017/06/04)
* decoder
  - ffmpeg: support *.adx
* fix byte order detection on FreeBSD/aarch64
* fix more random crashes when compiled with clang

ver 0.20.8 (2017/05/19)
* output
  - osx: fix build failure due to missing "noexcept"
* playlist