@@ -1,4 +1,6 @@
 ver 0.20.14 (not yet released)
+* database
+  - simple: fix file corruption in the presence of mount points
 
 ver 0.20.13 (2017/12/18)
 * output
